--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
 
         <div class="heading">
             <h2 class="heading-h"> <i>Promoting Wildlife Conservation Education </i></h2>
-            <p class="par-heading"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nobis, maxime doloribus sequi ab nulla voluptatem temporibus maiores, aspernatur delectus natus quam beatae nesciunt reiciendis quis enim est esse accusamus.</p>
+            <p class="par-heading"> Transforming awareness into action through conservation collaboration.<br> Come build bonds and breakthroughs on Wildpedia.</p>
             <button class="heading-button"> <a href="{{url_for('auth.register')}}"> Get involved! </a></button>
 
         </div>
@@ -44,7 +44,7 @@
             <img src="../static/img/elephant_2.jpg" alt="Elephant">
             <div class="about-cont">
                 <h2> What is WildPedia? </h2>
-                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum dolores quibusdam officiis, quod asperiores unde eius, accusamus sed et perferendis delectus aliquam! Ipsa reiciendis repudiandae dolores enim rerum nulla libero!</p>
+                <p> Wildpedia is an online platform empowering everyday citizens to discover, learn about, and actively contribute to wildlife conservation efforts. It aggregates educational materials, ways to engage, and a community connecting people passionate about wildlife conservation.</p>
                 <!-- add a background image here -->
             </div>
         </div>
